--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,19 @@ services:
       - ./hadoop.env
     ports:
       - 50070:50070
+    networks:
+      - spark-net
   datanode:
     image: bde2020/hadoop-datanode:1.1.0-hadoop2.8-java8
-    depends_on: 
+    depends_on:
       - namenode
+    container_name: datanode
     volumes:
       - ./data/datanode:/hadoop/dfs/data
     env_file:
       - ./hadoop.env
+    networks:
+      - spark-net
     ports:
       - 50075:50075
   spark-master:
@@ -29,16 +34,23 @@ services:
       - 7077:7077
     env_file:
       - ./hadoop.env
+    depends_on:
+      - namenode
+      - datanode
+    networks:
+      - spark-net
   spark-worker:
     image: bde2020/spark-worker:2.1.0-hadoop2.8-hive-java8
-    depends_on:
-      - spark-master
     environment:
       - SPARK_MASTER=spark://spark-master:7077
-    ports:
-      - 8081:8081
     env_file:
       - ./hadoop.env
+    depends_on:
+      - spark-master
+    ports:
+      - 8081:8081
+    networks:
+      - spark-net
   spark-notebook:
     image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
     container_name: spark-notebook
@@ -46,9 +58,42 @@ services:
       - ./hadoop.env
     ports:
       - 9001:9001
+    depends_on:
+      - spark-master
+      - namenode
+    environment:
+      CORE_CONF_fs_defaultFS: "hdfs://namenode:8020"
+      SPARK_MASTER: "spark://spark-master:7077"
+      MASTER: "spark://spark-master:7077"
+      #SPARK_SUBMIT_OPTIONS: "--jars /opt/sansa-examples/jars/sansa-examples-spark-2016-12.jar"
+    networks:
+      - spark-net
   hue:
     image: bde2020/hdfs-filebrowser:3.11
     ports:
       - 8088:8088
     environment:
       - NAMENODE_HOST=namenode
+    networks:
+      - spark-net
+  zeppelin:
+    build: ./zeppelin
+    ports:
+      - 80:8080
+    volumes:
+      - ./notebook:/opt/zeppelin/notebook
+    environment:
+      CORE_CONF_fs_defaultFS: "hdfs://namenode:8020"
+      SPARK_MASTER: "spark://spark-master:7077"
+      MASTER: "spark://spark-master:7077"
+      #SPARK_SUBMIT_OPTIONS: "--jars /opt/sansa-examples/jars/sansa-examples-spark-2016-12.jar"
+    depends_on:
+      - spark-master
+      - namenode
+    networks:
+      - spark-net
+
+networks:
+  spark-net:
+    external:
+      name: spark-net
