add zeppelin config files and hadoop replication factor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,10 +62,9 @@ services:
       - spark-master
       - namenode
     environment:
-      CORE_CONF_fs_defaultFS: "hdfs://namenode:8020"
+      CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
       SPARK_MASTER: "spark://spark-master:7077"
       MASTER: "spark://spark-master:7077"
-      #SPARK_SUBMIT_OPTIONS: "--jars /opt/sansa-examples/jars/sansa-examples-spark-2016-12.jar"
     networks:
       - spark-net
   hue:
@@ -79,14 +78,15 @@ services:
   zeppelin:
     build: ./zeppelin
     ports:
-      - 80:8080
+      - 6060:6060
     volumes:
       - ./notebook:/opt/zeppelin/notebook
+      - ./config_files/zeppelin/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
+      - ./config_files/zeppelin/shiro.ini:/opt/zeppelin/conf/shiro.ini
     environment:
-      CORE_CONF_fs_defaultFS: "hdfs://namenode:8020"
+      CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
       SPARK_MASTER: "spark://spark-master:7077"
       MASTER: "spark://spark-master:7077"
-      #SPARK_SUBMIT_OPTIONS: "--jars /opt/sansa-examples/jars/sansa-examples-spark-2016-12.jar"
     depends_on:
       - spark-master
       - namenode
