--- a/zeppelin/Dockerfile
+++ b/zeppelin/Dockerfile
@@ -1,11 +1,11 @@
-FROM bde2020/spark-base:2.1.0-hadoop2.8-hive-java8
+FROM spark-base-anaconda:2.1.0-hadoop2.8-hive-java8
 MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 
 ENV APACHE_SPARK_VERSION 2.1.0
 ENV APACHE_HADOOP_VERSION 2.8.0
 ENV ZEPPELIN_VERSION 0.8.0
 
-RUN apt-get update && apt-get install wget
+# RUN apt-get update && apt-get install wget
 RUN set -x \
     && curl -fSL "http://www-eu.apache.org/dist/zeppelin/zeppelin-0.8.0/zeppelin-0.8.0-bin-all.tgz" -o /tmp/zeppelin.tgz \
     && tar -xzvf /tmp/zeppelin.tgz -C /opt/ \
@@ -13,6 +13,8 @@ RUN set -x \
     && rm /tmp/zeppelin.tgz
 
 ENV SPARK_SUBMIT_OPTIONS "--jars /opt/zeppelin/sansa-examples-spark-2016-12.jar"
+
+RUN /root/anaconda3/bin/conda install -y -c anaconda grpcio
 
 WORKDIR /opt/zeppelin
 
