--- a/spark/base/Dockerfile
+++ b/spark/base/Dockerfile
@@ -7,11 +7,13 @@ RUN chmod a+x anaconda.sh
 RUN mv anaconda.sh /opt/anaconda.sh
 RUN apt-get update & apt-get install bzip2
 RUN ./opt/anaconda.sh -b
-# RUN /anaconda3/bin/conda install -y -q ipython notebook
+RUN /root/anaconda3/bin/conda install -y -q ipython notebook
 
 #Environment vaiables for Spark to use Anaconda Python and iPython notebook
 ENV PYSPARK_PYTHON /root/anaconda3/bin/python3
 ENV PYSPARK_DRIVER_PYTHON /root/anaconda3/bin/ipython3
+RUN export PATH=$PATH:/root/anaconda3/bin/
+
 # ENV PYSPARK_DRIVER_PYTHON_OPTS "notebook --no-browser --port=8888 --ip='*'"
 
 RUN apt-get update \
