--- a/docker-compose-host-net.yml
+++ b/docker-compose-host-net.yml
@@ -68,8 +68,7 @@ services:
       - 8088:8088
     environment:
       - NAMENODE_HOST=namenode
-    networks:
-      - spark-net
+    network_mode: "host"
   zeppelin:
     build: ./zeppelin
     ports:
