--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
       - ./hadoop.env
     ports:
       - 50070:50070
-    networks:
-      - spark-net
   datanode:
     image: bde2020/hadoop-datanode:1.1.0-hadoop2.8-java8
     depends_on:
@@ -22,8 +20,6 @@ services:
       - ./data/datanode:/hadoop/dfs/data
     env_file:
       - ./hadoop.env
-    networks:
-      - spark-net
     ports:
       - 50075:50075
   spark-master:
@@ -37,8 +33,6 @@ services:
     depends_on:
       - namenode
       - datanode
-    networks:
-      - spark-net
   spark-worker:
     build: ./spark/worker
     environment:
@@ -49,8 +43,6 @@ services:
       - spark-master
     ports:
       - 8081:8081
-    networks:
-      - spark-net
   spark-notebook:
     image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
     container_name: spark-notebook
@@ -65,35 +57,27 @@ services:
       CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
       SPARK_MASTER: "spark://spark-master:7077"
       MASTER: "spark://spark-master:7077"
-    networks:
-      - spark-net
   hue:
     image: bde2020/hdfs-filebrowser:3.11
+    container_name: hue
     ports:
       - 8088:8088
     environment:
       - NAMENODE_HOST=namenode
-    networks:
-      - spark-net
-  zeppelin:
-    build: ./zeppelin
-    ports:
-      - 9090:9090
-    volumes:
-      - ./notebook:/opt/zeppelin/notebook
-      - ./config_files/zeppelin/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
-      - ./config_files/zeppelin/shiro.ini:/opt/zeppelin/conf/shiro.ini
-    environment:
-      CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
-      SPARK_MASTER: "spark://spark-master:7077"
-      MASTER: "spark://spark-master:7077"
-    depends_on:
-      - spark-master
-      - namenode
-    networks:
-      - spark-net
-
-networks:
-  spark-net:
-    external: true
+#  zeppelin:
+#    build: ./zeppelin
+#    container_name: zeppelin
+#    ports:
+#      - 9090:9090
+#    volumes:
+#      - ./notebook:/opt/zeppelin/notebook
+#      - ./config_files/zeppelin/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
+#      - ./config_files/zeppelin/shiro.ini:/opt/zeppelin/conf/shiro.ini
+#    environment:
+#      CORE_CONF_fs_defaultFS: "hdfs://mohtaseb:54310"
+#      SPARK_MASTER: "spark://mohtaseb:7077"
+#      MASTER: "spark://mohtaseb:7077"
+#    depends_on:
+#      - spark-master
+#      - namenode
 
