--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,9 +74,9 @@ services:
 #      - ./config_files/zeppelin/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
 #      - ./config_files/zeppelin/shiro.ini:/opt/zeppelin/conf/shiro.ini
 #    environment:
-#      CORE_CONF_fs_defaultFS: "hdfs://mohtaseb:54310"
-#      SPARK_MASTER: "spark://mohtaseb:7077"
-#      MASTER: "spark://mohtaseb:7077"
+#      CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
+#      SPARK_MASTER: "spark://spark-master:7077"
+#      MASTER: "spark://spark-master:7077"
 #    depends_on:
 #      - spark-master
 #      - namenode
