--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./hadoop.env
     ports:
       - 50070:50070
+    network_mode: "host"
   datanode:
     image: bde2020/hadoop-datanode:1.1.0-hadoop2.8-java8
     depends_on:
@@ -22,6 +23,7 @@ services:
       - ./hadoop.env
     ports:
       - 50075:50075
+    network_mode: "host"
   spark-master:
     build: ./spark/master
     container_name: spark-master
@@ -33,16 +35,18 @@ services:
     depends_on:
       - namenode
       - datanode
+    network_mode: "host"
   spark-worker:
     build: ./spark/worker
     environment:
-      - SPARK_MASTER=spark://spark-master:7077
+      - SPARK_MASTER=spark://mohtaseb:7077
     env_file:
       - ./hadoop.env
     depends_on:
       - spark-master
     ports:
       - 8081:8081
+    network_mode: "host"
   spark-notebook:
     image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
     container_name: spark-notebook
@@ -54,16 +58,18 @@ services:
       - spark-master
       - namenode
     environment:
-      CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
-      SPARK_MASTER: "spark://spark-master:7077"
-      MASTER: "spark://spark-master:7077"
+      CORE_CONF_fs_defaultFS: "hdfs://mohtaseb:54310"
+      SPARK_MASTER: "spark://mohtaseb:7077"
+      MASTER: "spark://mohtaseb:7077"
+    network_mode: "host"
   hue:
     image: bde2020/hdfs-filebrowser:3.11
     container_name: hue
     ports:
       - 8088:8088
     environment:
-      - NAMENODE_HOST=namenode
+      - NAMENODE_HOST=mohtaseb
+    network_mode: "host"
 #  zeppelin:
 #    build: ./zeppelin
 #    container_name: zeppelin
@@ -74,9 +80,9 @@ services:
 #      - ./config_files/zeppelin/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
 #      - ./config_files/zeppelin/shiro.ini:/opt/zeppelin/conf/shiro.ini
 #    environment:
-#      CORE_CONF_fs_defaultFS: "hdfs://namenode:54310"
-#      SPARK_MASTER: "spark://spark-master:7077"
-#      MASTER: "spark://spark-master:7077"
+#      CORE_CONF_fs_defaultFS: "hdfs://mohtaseb:54310"
+#      SPARK_MASTER: "spark://mohtaseb:7077"
+#      MASTER: "spark://mohtaseb:7077"
 #    depends_on:
 #      - spark-master
 #      - namenode
